--- a/app/src/main/res/menu/sorting_options.xml
+++ b/app/src/main/res/menu/sorting_options.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -18,14 +19,21 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:tint="?attr/colorControlNormal"
-        android:viewportWidth="24"
-        android:viewportHeight="24">
-    <!--suppress LongLine -->
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M14.94,4.66h-4.72l2.36,-2.36zM10.25,19.37h4.66l-2.33,2.33zM4.73,16.14h6.12v1.59h-8.53v-1.29l5.92,-8.56h-5.88v-1.6h8.3v1.26l-5.93,8.6zM17.1,6.27L12.6,17.73h1.84l0.92,-2.45h5.11l0.92,2.45h1.84L18.74,6.27L6.1,6.27zM15.97,13.64l1.94,-5.18 1.94,5.18L4.97,13.64z" />
-</vector>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/MENU_SORT_UNSORTED"
+        android:title="@string/lbl_sort_unsorted"
+        android:icon="@drawable/ic_baseline_sort_unsorted"
+        />
+    <item
+        android:id="@+id/MENU_SORT_ASC"
+        android:title="@string/lbl_sort_ascending"
+        android:icon="@drawable/ic_baseline_sort_ascending"
+        />
+    <item
+        android:id="@+id/MENU_SORT_DESC"
+        android:title="@string/lbl_sort_descending"
+        android:icon="@drawable/ic_baseline_sort_descending"
+        />
+</menu>
