"Button.More" style refactored

--- a/app/src/main/res/layout/booksonbookshelf_row_book.xml
+++ b/app/src/main/res/layout/booksonbookshelf_row_book.xml
@@ -309,9 +309,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_row_menu"
-        style="@style/Button.More"
+        style="@style/Button.MenuPopup.More"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/card"
