--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -203,15 +203,26 @@
         <item name="icon">@drawable/ic_baseline_help_outline_24</item>
     </style>
 
-    <!-- Context menu button. -->
-    <style name="Button.More"
+
+    <style name="Button.MenuPopup"
            parent="Widget.Material3.Button.IconButton.Outlined">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="icon">@drawable/ic_baseline_more_vert_24</item>
         <item name="iconTint">?attr/colorOnPrimaryContainer</item>
+    </style>
+
+    <!-- Generic Context menu button with the 3-dot vertical line icon. -->
+    <style name="Button.MenuPopup.More">
+        <item name="icon">@drawable/ic_baseline_more_vert_24</item>
+        <item name="android:contentDescription">@string/action_show_options</item>
         <item name="android:scaleX">@dimen/btn_context_menu_scale</item>
         <item name="android:scaleY">@dimen/btn_context_menu_scale</item>
+    </style>
+
+    <!-- Sort Unsorted/Asc/Desc menu popup -->
+    <style name="Button.MenuPopup.Sorting">
+        <item name="icon">@drawable/ic_baseline_sort_unsorted</item>
+        <item name="android:contentDescription">@string/lbl_sorting</item>
     </style>
 
     <style name="ButtonPanel.Container"
