--- a/app/src/main/res/layout/row_edit_style_book_level_column.xml
+++ b/app/src/main/res/layout/row_edit_style_book_level_column.xml
@@ -38,7 +38,7 @@
         tools:checked="true"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@id/ROW_ONCLICK_TARGET"
         style="@style/RowEditor.TextSection"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,36 +50,30 @@
         <TextView
             android:id="@+id/column_name"
             style="@style/RowEditor.Text.Primary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="SelectableText"
             tools:text="@sample/data.json/field/name"
             />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_order_by"
-            style="?attr/materialIconButtonFilledTonalStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/lbl_sorting"
-            app:icon="@drawable/ic_baseline_sort_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="20dp"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <ImageView
         android:id="@id/ROW_GRABBER_ICON"
         style="@style/RowEditor.Button.DragHandle"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_row_menu"
         app:layout_constraintStart_toEndOf="@id/ROW_ONCLICK_TARGET"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription"
+        />
+
+    <!-- full size icon; so add a margin at the end to avoid overlap with scrollbar -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_row_menu"
+        style="@style/Button.MenuPopup.Sorting"
+        android:layout_marginEnd="@dimen/field_margin_end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
