snapshot using cardview

--- a/app/src/main/res/layout/booksonbookshelf_grid_book.xml
+++ b/app/src/main/res/layout/booksonbookshelf_grid_book.xml
@@ -24,42 +24,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grid_cell"
-    android:background="@drawable/bg_booklist_grid_cell"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@id/cover_image_0"
-        style="@style/CoverImage.Grid"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card"
+        style="@style/BoB.Group.Book"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"
-        tools:layout_height="@dimen/tools_cover_height"
-        tools:src="@sample/covers"
-        />
+        >
 
-    <TextView
-        android:id="@+id/title"
-        style="@style/Field.BookTitle.Small"
-        android:maxLines="10"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@sample/data.json/book/title"
-        tools:visibility="visible"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_buttons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="cover_image_0,title"
-        />
+            <ImageView
+                android:id="@id/cover_image_0"
+                style="@style/CoverImage.Grid"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ContentDescription"
+                tools:layout_height="@dimen/tools_cover_height"
+                tools:src="@sample/covers"
+                />
+
+            <TextView
+                android:id="@+id/title"
+                style="@style/Field.BookTitle.Small"
+                android:maxLines="10"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@sample/data.json/book/title"
+                tools:visibility="visible"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/view_book_details"
@@ -67,21 +74,20 @@
         android:scaleX="@dimen/btn_context_menu_scale"
         android:scaleY="@dimen/btn_context_menu_scale"
         app:icon="@drawable/ic_baseline_details_24"
-        app:layout_constraintVertical_bias="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_buttons"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintVertical_bias="1"
         />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_row_menu"
         style="@style/Button.MenuPopup.More"
-        android:layout_marginStart="@dimen/field_margin_inline"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="1"
         app:layout_constraintStart_toEndOf="@id/view_book_details"
-        app:layout_constraintTop_toBottomOf="@id/barrier_buttons"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintVertical_bias="1"
         tools:visibility="visible"
         />
 
