--- a/app/src/main/res/layout-sw800dp-land/booksonbookshelf_content.xml
+++ b/app/src/main/res/layout-sw800dp-land/booksonbookshelf_content.xml
@@ -2,7 +2,7 @@
 
 
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -30,12 +30,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >
 
+    <!--  app:layoutManager is set from code -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="@dimen/bob_embedded_list_width"
         android:layout_height="match_parent"
         android:paddingEnd="@dimen/scrollbar_padding"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintEnd_toStartOf="@id/details_frame"
         app:layout_constraintStart_toStartOf="parent"
