--- a/app/src/main/res/layout/booksonbookshelf_grid_book.xml
+++ b/app/src/main/res/layout/booksonbookshelf_grid_book.xml
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@sample/data.json/book/author"
+        tools:text="@sample/data.json/author/full_name"
         tools:visibility="visible"
         />
 
