--- a/app/src/main/res/values/menus.xml
+++ b/app/src/main/res/values/menus.xml
@@ -271,6 +271,8 @@
           type="id" />
     <item name="MENU_SETTINGS"
           type="id" />
+    <item name="MENU_HELP"
+          type="id" />
     <item name="MENU_ABOUT"
           type="id" />
 
